load("@bazel_skylib//rules:common_settings.bzl", "bool_flag", "string_flag")
load("@obazl_rules_ocaml//ocaml:rules.bzl", "ppx_executable", "ppx_module")
load("//:BUILD.bzl", "REPO_PPX_EXECUTABLE_OPTS")
load(":BUILD.bzl", "PKG_PPX_EXECUTABLE_OPTS")

THIS_PPX_EXECUTABLE_OPTS = REPO_PPX_EXECUTABLE_OPTS + PKG_PPX_EXECUTABLE_OPTS

## temporary:
alias(
    name = "driver",
    actual = ":Driver",
    visibility = ["//visibility:public"],
)

###############
ppx_executable(
    name = "ppx.exe[bisect_ppx][h_list.ppx][ppx_bench][ppx_deriving.eq][ppx_jane][ppx_version]",
    lazy_deps = [
        "@opam//pkg:ppx_expect.collector",
        "@opam//pkg:ppx_hash.runtime-lib",
        "@opam//pkg:ppx_sexp_conv.runtime-lib",
        "@opam//pkg:ppx_deriving.runtime",
        "@opam//pkg:ppx_assert.runtime-lib",
        "@opam//pkg:ppx_compare.runtime-lib",
        "@opam//pkg:ppx_inline_test.runtime-lib",
        "@opam//pkg:ppx_bench.runtime-lib",
        "@opam//pkg:bisect_ppx.runtime",
        "@opam//pkg:ppx_enumerate.runtime-lib",
        "@opam//pkg:ppx_module_timer.runtime",
    ],
    main = ":Driver",
    opts = THIS_PPX_EXECUTABLE_OPTS,
    visibility = [
        "//src/lib/vrf_lib:__pkg__",
        "//src/lib/vrf_lib/tests:__pkg__",
    ],
    deps = [
        "@opam//pkg:bisect_ppx",
        "@opam//pkg:ppx_bench",
        "@opam//pkg:ppx_deriving.eq",
        "@opam//pkg:ppx_jane",
        "@opam//pkg:ppxlib",
        "@ppx_version//src:ppx_version",
        "@snarky//h_list/ppx:ppx_h_list",
    ],
)

###############
ppx_executable(
    name = "ppx.exe[graphql_ppx][ppx_coda][ppx_deriving.show][ppx_deriving_yojson][ppx_jane][ppx_version][ppx_deriving.eq][bisect_ppx]",
    lazy_deps = [
        "@opam//pkg:ppx_expect.collector",
        "@opam//pkg:yojson",
        "@opam//pkg:ppx_hash.runtime-lib",
        "@opam//pkg:ppx_deriving_yojson.runtime",
        "@opam//pkg:ppx_sexp_conv.runtime-lib",
        "@opam//pkg:ppx_deriving.runtime",
        "@opam//pkg:ppx_assert.runtime-lib",
        "@opam//pkg:ppx_compare.runtime-lib",
        "@opam//pkg:ppx_inline_test.runtime-lib",
        "@opam//pkg:ppx_bench.runtime-lib",
        "@opam//pkg:bisect_ppx.runtime",
        "@opam//pkg:ppx_enumerate.runtime-lib",
        "@opam//pkg:ppx_module_timer.runtime",
    ],
    main = ":Driver",
    opts = THIS_PPX_EXECUTABLE_OPTS,
    visibility = [
        "//src/app/rosetta/ocaml-signer:__pkg__",
        "//src/app/rosetta/test-agent:__pkg__",
    ],
    deps = [
        "@graphql_ppx//src/native:graphql_ppx",
        "@mina//src/lib/ppx_coda",
        "@opam//pkg:bisect_ppx",
        "@opam//pkg:ppx_deriving.eq",
        "@opam//pkg:ppx_deriving.show",
        "@opam//pkg:ppx_deriving_yojson",
        "@opam//pkg:ppx_jane",
        "@opam//pkg:ppxlib",
        "@ppx_version//src:ppx_version",
    ],
)

###############
ppx_executable(
    name = "ppx.exe[ppx_coda][ppx_version][ppx_jane][bisect_ppx]",
    lazy_deps = [
        "@opam//pkg:ppx_expect.collector",
        "@opam//pkg:ppx_hash.runtime-lib",
        "@opam//pkg:ppx_sexp_conv.runtime-lib",
        "@opam//pkg:ppx_assert.runtime-lib",
        "@opam//pkg:ppx_compare.runtime-lib",
        "@opam//pkg:ppx_inline_test.runtime-lib",
        "@opam//pkg:ppx_bench.runtime-lib",
        "@opam//pkg:bisect_ppx.runtime",
        "@opam//pkg:ppx_enumerate.runtime-lib",
        "@opam//pkg:ppx_module_timer.runtime",
    ],
    main = ":Driver",
    opts = THIS_PPX_EXECUTABLE_OPTS,
    visibility = [
        "//src/lib/coda_commands:__pkg__",
        "//src/lib/ledger_catchup:__pkg__",
        "//src/lib/prover:__pkg__",
        "//src/lib/transition_handler:__pkg__",
    ],
    deps = [
        "@mina//src/lib/ppx_coda",
        "@opam//pkg:bisect_ppx",
        "@opam//pkg:ppx_jane",
        "@opam//pkg:ppxlib",
        "@ppx_version//src:ppx_version",
    ],
)

###############
ppx_executable(
    name = "ppx.exe[ppx_coda][ppx_version][ppx_jane][ppx_deriving.eq][bisect_ppx]",
    lazy_deps = [
        "@opam//pkg:ppx_expect.collector",
        "@opam//pkg:ppx_hash.runtime-lib",
        "@opam//pkg:ppx_sexp_conv.runtime-lib",
        "@opam//pkg:ppx_deriving.runtime",
        "@opam//pkg:ppx_assert.runtime-lib",
        "@opam//pkg:ppx_compare.runtime-lib",
        "@opam//pkg:ppx_inline_test.runtime-lib",
        "@opam//pkg:ppx_bench.runtime-lib",
        "@opam//pkg:bisect_ppx.runtime",
        "@opam//pkg:ppx_enumerate.runtime-lib",
        "@opam//pkg:ppx_module_timer.runtime",
    ],
    main = ":Driver",
    opts = THIS_PPX_EXECUTABLE_OPTS,
    visibility = [
        "//src/lib/best_tip_prover:__pkg__",
        "//src/lib/non_empty_list:__pkg__",
        "//src/lib/transition_router:__pkg__",
    ],
    deps = [
        "@mina//src/lib/ppx_coda",
        "@opam//pkg:bisect_ppx",
        "@opam//pkg:ppx_deriving.eq",
        "@opam//pkg:ppx_jane",
        "@opam//pkg:ppxlib",
        "@ppx_version//src:ppx_version",
    ],
)

###############
ppx_executable(
    name = "ppx.exe[ppx_coda][ppx_version][ppx_jane][ppx_deriving.std][bisect_ppx]",
    lazy_deps = [
        "@opam//pkg:ppx_expect.collector",
        "@opam//pkg:ppx_hash.runtime-lib",
        "@opam//pkg:ppx_sexp_conv.runtime-lib",
        "@opam//pkg:ppx_deriving.runtime",
        "@opam//pkg:ppx_assert.runtime-lib",
        "@opam//pkg:ppx_compare.runtime-lib",
        "@opam//pkg:ppx_inline_test.runtime-lib",
        "@opam//pkg:ppx_bench.runtime-lib",
        "@opam//pkg:bisect_ppx.runtime",
        "@opam//pkg:ppx_enumerate.runtime-lib",
        "@opam//pkg:ppx_module_timer.runtime",
    ],
    main = ":Driver",
    opts = THIS_PPX_EXECUTABLE_OPTS,
    visibility = [
        "//src/lib/fake_network:__pkg__",
        "//src/lib/web_client_pipe:__pkg__",
    ],
    deps = [
        "@mina//src/lib/ppx_coda",
        "@opam//pkg:bisect_ppx",
        "@opam//pkg:ppx_deriving.std",
        "@opam//pkg:ppx_jane",
        "@opam//pkg:ppxlib",
        "@ppx_version//src:ppx_version",
    ],
)

###############
ppx_executable(
    name = "ppx.exe[ppx_coda][ppx_version][ppx_jane][ppx_deriving.std][ppx_deriving_yojson][bisect_ppx]",
    lazy_deps = [
        "@opam//pkg:ppx_expect.collector",
        "@opam//pkg:yojson",
        "@opam//pkg:ppx_hash.runtime-lib",
        "@opam//pkg:ppx_deriving_yojson.runtime",
        "@opam//pkg:ppx_sexp_conv.runtime-lib",
        "@opam//pkg:ppx_deriving.runtime",
        "@opam//pkg:ppx_assert.runtime-lib",
        "@opam//pkg:ppx_compare.runtime-lib",
        "@opam//pkg:ppx_inline_test.runtime-lib",
        "@opam//pkg:ppx_bench.runtime-lib",
        "@opam//pkg:bisect_ppx.runtime",
        "@opam//pkg:ppx_enumerate.runtime-lib",
        "@opam//pkg:ppx_module_timer.runtime",
    ],
    main = ":Driver",
    opts = THIS_PPX_EXECUTABLE_OPTS,
    visibility = [
        "//src/lib/coda_transition:__pkg__",
        "//src/lib/pickles/plonk_checks:__pkg__",
    ],
    deps = [
        "@mina//src/lib/ppx_coda",
        "@opam//pkg:bisect_ppx",
        "@opam//pkg:ppx_deriving.std",
        "@opam//pkg:ppx_deriving_yojson",
        "@opam//pkg:ppx_jane",
        "@opam//pkg:ppxlib",
        "@ppx_version//src:ppx_version",
    ],
)

###############
ppx_executable(
    name = "ppx.exe[ppx_coda][ppx_version][ppx_let][ppx_assert][ppx_bin_prot][ppx_sexp_conv][ppx_compare][ppx_hash][ppx_optcomp][ppx_custom_printf][ppx_deriving.std][ppx_deriving_yojson][h_list.ppx][ppx_inline_test][bisect_ppx]",
    lazy_deps = [
        "@opam//pkg:yojson",
        "@opam//pkg:ppx_hash.runtime-lib",
        "@opam//pkg:ppx_deriving_yojson.runtime",
        "@opam//pkg:ppx_sexp_conv.runtime-lib",
        "@opam//pkg:ppx_deriving.runtime",
        "@opam//pkg:ppx_assert.runtime-lib",
        "@opam//pkg:ppx_compare.runtime-lib",
        "@opam//pkg:ppx_inline_test.runtime-lib",
        "@opam//pkg:bin_prot",
        "@opam//pkg:bisect_ppx.runtime",
    ],
    main = ":Driver",
    opts = THIS_PPX_EXECUTABLE_OPTS,
    visibility = [
        "//src/lib/currency:__pkg__",
        "//src/nonconsensus/currency:__pkg__",
    ],
    deps = [
        "@mina//src/lib/ppx_coda",
        "@opam//pkg:bisect_ppx",
        "@opam//pkg:ppx_assert",
        "@opam//pkg:ppx_bin_prot",
        "@opam//pkg:ppx_compare",
        "@opam//pkg:ppx_custom_printf",
        "@opam//pkg:ppx_deriving.std",
        "@opam//pkg:ppx_deriving_yojson",
        "@opam//pkg:ppx_hash",
        "@opam//pkg:ppx_inline_test",
        "@opam//pkg:ppx_let",
        "@opam//pkg:ppx_sexp_conv",
        "@opam//pkg:ppxlib",
        "@ppx_optcomp//src:ppx_optcomp",
        "@ppx_version//src:ppx_version",
        "@snarky//h_list/ppx:ppx_h_list",
    ],
)

###############
ppx_executable(
    name = "ppx.exe[ppx_coda][ppx_version][ppx_optcomp][ppx_assert][ppx_let][ppx_sexp_conv][ppx_compare][ppx_deriving.std][ppx_custom_printf][ppx_deriving_yojson][ppx_inline_test][bisect_ppx]",
    lazy_deps = [
        "@opam//pkg:yojson",
        "@opam//pkg:ppx_deriving_yojson.runtime",
        "@opam//pkg:ppx_sexp_conv.runtime-lib",
        "@opam//pkg:ppx_deriving.runtime",
        "@opam//pkg:ppx_assert.runtime-lib",
        "@opam//pkg:ppx_compare.runtime-lib",
        "@opam//pkg:ppx_inline_test.runtime-lib",
        "@opam//pkg:bisect_ppx.runtime",
    ],
    main = ":Driver",
    opts = THIS_PPX_EXECUTABLE_OPTS,
    visibility = [
        "//src/lib/rosetta_lib:__pkg__",
        "//src/nonconsensus/rosetta_lib:__pkg__",
    ],
    deps = [
        "@mina//src/lib/ppx_coda",
        "@opam//pkg:bisect_ppx",
        "@opam//pkg:ppx_assert",
        "@opam//pkg:ppx_compare",
        "@opam//pkg:ppx_custom_printf",
        "@opam//pkg:ppx_deriving.std",
        "@opam//pkg:ppx_deriving_yojson",
        "@opam//pkg:ppx_inline_test",
        "@opam//pkg:ppx_let",
        "@opam//pkg:ppx_sexp_conv",
        "@opam//pkg:ppxlib",
        "@ppx_optcomp//src:ppx_optcomp",
        "@ppx_version//src:ppx_version",
    ],
)

###############
ppx_executable(
    name = "ppx.exe[ppx_deriving_yojson][ppx_jane][ppx_deriving.std]",
    lazy_deps = [
        "@opam//pkg:ppx_expect.collector",
        "@opam//pkg:yojson",
        "@opam//pkg:ppx_hash.runtime-lib",
        "@opam//pkg:ppx_deriving_yojson.runtime",
        "@opam//pkg:ppx_sexp_conv.runtime-lib",
        "@opam//pkg:ppx_deriving.runtime",
        "@opam//pkg:ppx_assert.runtime-lib",
        "@opam//pkg:ppx_compare.runtime-lib",
        "@opam//pkg:ppx_inline_test.runtime-lib",
        "@opam//pkg:ppx_bench.runtime-lib",
        "@opam//pkg:ppx_enumerate.runtime-lib",
        "@opam//pkg:ppx_module_timer.runtime",
    ],
    main = ":Driver",
    opts = THIS_PPX_EXECUTABLE_OPTS,
    visibility = [
        "@snarky//examples/anonvote:__pkg__",
        "@snarky//examples/sfbw/ex_bools:__pkg__",
        "@snarky//examples/sfbw/ex_merkle_list:__pkg__",
        "@snarky//examples/sfbw/ex_merkle_tree:__pkg__",
        "@snarky//examples/sfbw/ex_merkle_tree_with_data:__pkg__",
        "@snarky//examples/sfbw/ex_preimage:__pkg__",
        "@snarky//examples/sfbw/ex_small_preimage:__pkg__",
    ],
    deps = [
        "@opam//pkg:ppx_deriving.std",
        "@opam//pkg:ppx_deriving_yojson",
        "@opam//pkg:ppx_jane",
        "@opam//pkg:ppxlib",
    ],
)

###############
ppx_executable(
    name = "ppx.exe[ppx_jane]",
    lazy_deps = [
        "@opam//pkg:ppx_expect.collector",
        "@opam//pkg:ppx_hash.runtime-lib",
        "@opam//pkg:ppx_sexp_conv.runtime-lib",
        "@opam//pkg:ppx_assert.runtime-lib",
        "@opam//pkg:ppx_compare.runtime-lib",
        "@opam//pkg:ppx_inline_test.runtime-lib",
        "@opam//pkg:ppx_bench.runtime-lib",
        "@opam//pkg:ppx_enumerate.runtime-lib",
        "@opam//pkg:ppx_module_timer.runtime",
    ],
    main = ":Driver",
    opts = THIS_PPX_EXECUTABLE_OPTS,
    visibility = [
        "//scripts/archive/ocaml:__pkg__",
        "//src/app/reformat:__pkg__",
        "@async_kernel//eager_deferred/src:__pkg__",
        "@async_kernel//limiter_async/src:__pkg__",
        "@async_kernel//limiter_async/test:__pkg__",
        "@async_kernel//persistent_connection_kernel/src:__pkg__",
        "@async_kernel//src:__pkg__",
        "@async_kernel//weak_hashtbl_async/src:__pkg__",
        "@async_kernel//weak_hashtbl_async/test:__pkg__",
        "@rpc_parallel//example:__pkg__",
        "@rpc_parallel//expect_test:__pkg__",
        "@rpc_parallel//src:__pkg__",
        "@snarky//app/reformat-snarky:__pkg__",
        "@snarky//examples/merkle_update:__pkg__",
        "@snarky//examples/tutorial:__pkg__",
        "@snarky//meja/src:__pkg__",
        "@snarky//src/camlsnark_c/groth16_gpu_prover/test:__pkg__",
    ],
    deps = [
        "@opam//pkg:ppx_jane",
        "@opam//pkg:ppxlib",
    ],
)

###############
ppx_executable(
    name = "ppx.exe[ppx_jane][ppx_coda][ppx_version][bisect_ppx]",
    lazy_deps = [
        "@opam//pkg:ppx_expect.collector",
        "@opam//pkg:ppx_hash.runtime-lib",
        "@opam//pkg:ppx_sexp_conv.runtime-lib",
        "@opam//pkg:ppx_assert.runtime-lib",
        "@opam//pkg:ppx_compare.runtime-lib",
        "@opam//pkg:ppx_inline_test.runtime-lib",
        "@opam//pkg:ppx_bench.runtime-lib",
        "@opam//pkg:bisect_ppx.runtime",
        "@opam//pkg:ppx_enumerate.runtime-lib",
        "@opam//pkg:ppx_module_timer.runtime",
    ],
    main = ":Driver",
    opts = THIS_PPX_EXECUTABLE_OPTS,
    visibility = [
        "//src/lib/transaction_status:__pkg__",
        "//src/lib/transition_frontier/extensions:__pkg__",
        "//src/lib/transition_frontier/persistent_root:__pkg__",
    ],
    deps = [
        "@mina//src/lib/ppx_coda",
        "@opam//pkg:bisect_ppx",
        "@opam//pkg:ppx_jane",
        "@opam//pkg:ppxlib",
        "@ppx_version//src:ppx_version",
    ],
)

###############
ppx_executable(
    name = "ppx.exe[ppx_jane][ppx_coda][ppx_version][ppx_deriving.eq][ppx_deriving_yojson][bisect_ppx]",
    lazy_deps = [
        "@opam//pkg:ppx_expect.collector",
        "@opam//pkg:yojson",
        "@opam//pkg:ppx_hash.runtime-lib",
        "@opam//pkg:ppx_deriving_yojson.runtime",
        "@opam//pkg:ppx_sexp_conv.runtime-lib",
        "@opam//pkg:ppx_deriving.runtime",
        "@opam//pkg:ppx_assert.runtime-lib",
        "@opam//pkg:ppx_compare.runtime-lib",
        "@opam//pkg:ppx_inline_test.runtime-lib",
        "@opam//pkg:ppx_bench.runtime-lib",
        "@opam//pkg:bisect_ppx.runtime",
        "@opam//pkg:ppx_enumerate.runtime-lib",
        "@opam//pkg:ppx_module_timer.runtime",
    ],
    main = ":Driver",
    opts = THIS_PPX_EXECUTABLE_OPTS,
    visibility = [
        "//src/lib/blake2:__pkg__",
        "//src/lib/transition_frontier:__pkg__",
    ],
    deps = [
        "@mina//src/lib/ppx_coda",
        "@opam//pkg:bisect_ppx",
        "@opam//pkg:ppx_deriving.eq",
        "@opam//pkg:ppx_deriving_yojson",
        "@opam//pkg:ppx_jane",
        "@opam//pkg:ppxlib",
        "@ppx_version//src:ppx_version",
    ],
)

###############
ppx_executable(
    name = "ppx.exe[ppx_jane][ppx_coda][ppx_version][ppx_deriving.std][ppx_deriving_yojson][bisect_ppx]",
    lazy_deps = [
        "@opam//pkg:ppx_expect.collector",
        "@opam//pkg:yojson",
        "@opam//pkg:ppx_hash.runtime-lib",
        "@opam//pkg:ppx_deriving_yojson.runtime",
        "@opam//pkg:ppx_sexp_conv.runtime-lib",
        "@opam//pkg:ppx_deriving.runtime",
        "@opam//pkg:ppx_assert.runtime-lib",
        "@opam//pkg:ppx_compare.runtime-lib",
        "@opam//pkg:ppx_inline_test.runtime-lib",
        "@opam//pkg:ppx_bench.runtime-lib",
        "@opam//pkg:bisect_ppx.runtime",
        "@opam//pkg:ppx_enumerate.runtime-lib",
        "@opam//pkg:ppx_module_timer.runtime",
    ],
    main = ":Driver",
    opts = THIS_PPX_EXECUTABLE_OPTS,
    visibility = [
        "//src/lib/transition_frontier/frontier_base:__pkg__",
        "//src/lib/transition_frontier/full_frontier:__pkg__",
    ],
    deps = [
        "@mina//src/lib/ppx_coda",
        "@opam//pkg:bisect_ppx",
        "@opam//pkg:ppx_deriving.std",
        "@opam//pkg:ppx_deriving_yojson",
        "@opam//pkg:ppx_jane",
        "@opam//pkg:ppxlib",
        "@ppx_version//src:ppx_version",
    ],
)

###############
ppx_executable(
    name = "ppx.exe[ppx_jane][ppx_deriving.enum]",
    lazy_deps = [
        "@opam//pkg:ppx_expect.collector",
        "@opam//pkg:ppx_hash.runtime-lib",
        "@opam//pkg:ppx_sexp_conv.runtime-lib",
        "@opam//pkg:ppx_deriving.runtime",
        "@opam//pkg:ppx_assert.runtime-lib",
        "@opam//pkg:ppx_compare.runtime-lib",
        "@opam//pkg:ppx_inline_test.runtime-lib",
        "@opam//pkg:ppx_bench.runtime-lib",
        "@opam//pkg:ppx_enumerate.runtime-lib",
        "@opam//pkg:ppx_module_timer.runtime",
    ],
    main = ":Driver",
    opts = THIS_PPX_EXECUTABLE_OPTS,
    visibility = [
        "//src/lib/snarky_log/examples/election:__pkg__",
        "@snarky//examples/election:__pkg__",
        "@snarky//examples/election_gpu:__pkg__",
        "@snarky//examples/elliptic_curve_operations:__pkg__",
        "@snarky//examples/imperative_test:__pkg__",
    ],
    deps = [
        "@opam//pkg:ppx_deriving.enum",
        "@opam//pkg:ppx_jane",
        "@opam//pkg:ppxlib",
    ],
)

###############
ppx_executable(
    name = "ppx.exe[ppx_jane][ppx_deriving.eq]",
    lazy_deps = [
        "@opam//pkg:ppx_expect.collector",
        "@opam//pkg:ppx_hash.runtime-lib",
        "@opam//pkg:ppx_sexp_conv.runtime-lib",
        "@opam//pkg:ppx_deriving.runtime",
        "@opam//pkg:ppx_assert.runtime-lib",
        "@opam//pkg:ppx_compare.runtime-lib",
        "@opam//pkg:ppx_inline_test.runtime-lib",
        "@opam//pkg:ppx_bench.runtime-lib",
        "@opam//pkg:ppx_enumerate.runtime-lib",
        "@opam//pkg:ppx_module_timer.runtime",
    ],
    main = ":Driver",
    opts = THIS_PPX_EXECUTABLE_OPTS,
    visibility = [
        "@snarky//group_map:__pkg__",
        "@snarky//snarky_curve:__pkg__",
        "@snarky//snarky_integer:__pkg__",
        "@snarky//snarky_signature:__pkg__",
        "@snarky//sponge:__pkg__",
    ],
    deps = [
        "@opam//pkg:ppx_deriving.eq",
        "@opam//pkg:ppx_jane",
        "@opam//pkg:ppxlib",
    ],
)

###############
ppx_executable(
    name = "ppx.exe[ppx_jane][ppx_deriving.eq][bisect_ppx]",
    lazy_deps = [
        "@opam//pkg:ppx_expect.collector",
        "@opam//pkg:ppx_hash.runtime-lib",
        "@opam//pkg:ppx_sexp_conv.runtime-lib",
        "@opam//pkg:ppx_deriving.runtime",
        "@opam//pkg:ppx_assert.runtime-lib",
        "@opam//pkg:ppx_compare.runtime-lib",
        "@opam//pkg:ppx_inline_test.runtime-lib",
        "@opam//pkg:ppx_bench.runtime-lib",
        "@opam//pkg:bisect_ppx.runtime",
        "@opam//pkg:ppx_enumerate.runtime-lib",
        "@opam//pkg:ppx_module_timer.runtime",
    ],
    main = ":Driver",
    opts = THIS_PPX_EXECUTABLE_OPTS,
    visibility = [
        "@snarky//bitstring_lib:__pkg__",
        "@snarky//fold_lib:__pkg__",
        "@snarky//interval_union:__pkg__",
        "@snarky//tuple_lib:__pkg__",
    ],
    deps = [
        "@opam//pkg:bisect_ppx",
        "@opam//pkg:ppx_deriving.eq",
        "@opam//pkg:ppx_jane",
        "@opam//pkg:ppxlib",
    ],
)

###############
ppx_executable(
    name = "ppx.exe[ppx_jane][ppx_version][bisect_ppx]",
    lazy_deps = [
        "@opam//pkg:ppx_expect.collector",
        "@opam//pkg:ppx_hash.runtime-lib",
        "@opam//pkg:ppx_sexp_conv.runtime-lib",
        "@opam//pkg:ppx_assert.runtime-lib",
        "@opam//pkg:ppx_compare.runtime-lib",
        "@opam//pkg:ppx_inline_test.runtime-lib",
        "@opam//pkg:ppx_bench.runtime-lib",
        "@opam//pkg:bisect_ppx.runtime",
        "@opam//pkg:ppx_enumerate.runtime-lib",
        "@opam//pkg:ppx_module_timer.runtime",
    ],
    main = ":Driver",
    opts = THIS_PPX_EXECUTABLE_OPTS,
    visibility = [
        "//src/lib/timeout_lib:__pkg__",
        "//src/lib/transition_frontier/tests:__pkg__",
    ],
    deps = [
        "@opam//pkg:bisect_ppx",
        "@opam//pkg:ppx_jane",
        "@opam//pkg:ppxlib",
        "@ppx_version//src:ppx_version",
    ],
)

###############
ppx_executable(
    name = "ppx.exe[ppx_jane][ppx_version][ppx_deriving.eq][ppx_deriving_yojson][bisect_ppx]",
    lazy_deps = [
        "@opam//pkg:ppx_expect.collector",
        "@opam//pkg:yojson",
        "@opam//pkg:ppx_hash.runtime-lib",
        "@opam//pkg:ppx_deriving_yojson.runtime",
        "@opam//pkg:ppx_sexp_conv.runtime-lib",
        "@opam//pkg:ppx_deriving.runtime",
        "@opam//pkg:ppx_assert.runtime-lib",
        "@opam//pkg:ppx_compare.runtime-lib",
        "@opam//pkg:ppx_inline_test.runtime-lib",
        "@opam//pkg:ppx_bench.runtime-lib",
        "@opam//pkg:bisect_ppx.runtime",
        "@opam//pkg:ppx_enumerate.runtime-lib",
        "@opam//pkg:ppx_module_timer.runtime",
    ],
    main = ":Driver",
    opts = THIS_PPX_EXECUTABLE_OPTS,
    visibility = [
        "//src/lib/graphql_lib:__pkg__",
        "//src/lib/sgn_type:__pkg__",
        "//src/lib/transaction_snark_work:__pkg__",
    ],
    deps = [
        "@opam//pkg:bisect_ppx",
        "@opam//pkg:ppx_deriving.eq",
        "@opam//pkg:ppx_deriving_yojson",
        "@opam//pkg:ppx_jane",
        "@opam//pkg:ppxlib",
        "@ppx_version//src:ppx_version",
    ],
)

###############
ppx_executable(
    name = "ppx.exe[ppx_jane][ppx_version][ppx_inline_test][bisect_ppx]",
    lazy_deps = [
        "@opam//pkg:ppx_expect.collector",
        "@opam//pkg:ppx_hash.runtime-lib",
        "@opam//pkg:ppx_sexp_conv.runtime-lib",
        "@opam//pkg:ppx_assert.runtime-lib",
        "@opam//pkg:ppx_compare.runtime-lib",
        "@opam//pkg:ppx_inline_test.runtime-lib",
        "@opam//pkg:ppx_bench.runtime-lib",
        "@opam//pkg:bisect_ppx.runtime",
        "@opam//pkg:ppx_enumerate.runtime-lib",
        "@opam//pkg:ppx_module_timer.runtime",
    ],
    main = ":Driver",
    opts = THIS_PPX_EXECUTABLE_OPTS,
    visibility = [
        "//src/lib/hex:__pkg__",
        "//src/nonconsensus/hex:__pkg__",
    ],
    deps = [
        "@opam//pkg:bisect_ppx",
        "@opam//pkg:ppx_inline_test",
        "@opam//pkg:ppx_jane",
        "@opam//pkg:ppxlib",
        "@ppx_version//src:ppx_version",
    ],
)

###############
ppx_executable(
    name = "ppx.exe[ppx_tools_versioned.metaquot_402]",
    main = ":Driver",
    opts = THIS_PPX_EXECUTABLE_OPTS,
    visibility = [
        "@graphql_ppx//src/base:__pkg__",
        "@graphql_ppx//src/bucklescript:__pkg__",
    ],
    deps = [
        "@opam//pkg:ppx_tools_versioned.metaquot_402",
        "@opam//pkg:ppxlib",
    ],
)

###############
ppx_executable(
    name = "ppx.exe[ppx_version][bisect_ppx]",
    lazy_deps = [
        "@opam//pkg:bisect_ppx.runtime",
    ],
    main = ":Driver",
    opts = THIS_PPX_EXECUTABLE_OPTS,
    visibility = [
        "//src/app/benchmarks:__pkg__",
        "//src/app/decoder:__pkg__",
        "//src/lib/bash_colors:__pkg__",
        "//src/lib/coda_incremental:__pkg__",
        "//src/lib/coda_plugins/examples/do_nothing:__pkg__",
        "//src/lib/coda_version:__pkg__",
        "//src/lib/crs:__pkg__",
        "//src/lib/cstubs_applicative:__pkg__",
        "//src/lib/debug_assert:__pkg__",
        "//src/lib/empty_hashes:__pkg__",
        "//src/lib/genesis_proof:__pkg__",
        "//src/lib/hash_prefixes:__pkg__",
        "//src/lib/immutable_array:__pkg__",
        "//src/lib/integers_stubs_js:__pkg__",
        "//src/lib/integers_stubs_js/test:__pkg__",
        "//src/lib/marlin_plonk_bindings:__subpackages__",
        # "//src/lib/marlin_plonk_bindings/bigint_256:__pkg__",
        # "//src/lib/marlin_plonk_bindings/bigint_256/test:__pkg__",
        # "//src/lib/marlin_plonk_bindings/bigint_384:__pkg__",
        # "//src/lib/marlin_plonk_bindings/bigint_384/test:__pkg__",
        # "//src/lib/marlin_plonk_bindings/bn_382_fp:__pkg__",
        # "//src/lib/marlin_plonk_bindings/bn_382_fp/vector:__pkg__",
        # "//src/lib/marlin_plonk_bindings/bn_382_fq:__pkg__",
        # "//src/lib/marlin_plonk_bindings/bn_382_fq/vector:__pkg__",
        # "//src/lib/marlin_plonk_bindings/stubs:__pkg__",
        # "//src/lib/marlin_plonk_bindings/tweedle_dee:__pkg__",
        # "//src/lib/marlin_plonk_bindings/tweedle_dum:__pkg__",
        # "//src/lib/marlin_plonk_bindings/tweedle_fp:__pkg__",
        # "//src/lib/marlin_plonk_bindings/tweedle_fp/vector:__pkg__",
        # "//src/lib/marlin_plonk_bindings/tweedle_fp_index:__pkg__",
        # "//src/lib/marlin_plonk_bindings/tweedle_fp_plonk_oracles:__pkg__",
        # "//src/lib/marlin_plonk_bindings/tweedle_fp_plonk_verifier_index:__pkg__",
        # "//src/lib/marlin_plonk_bindings/tweedle_fp_proof:__pkg__",
        # "//src/lib/marlin_plonk_bindings/tweedle_fp_urs:__pkg__",
        # "//src/lib/marlin_plonk_bindings/tweedle_fp_urs/test:__pkg__",
        # "//src/lib/marlin_plonk_bindings/tweedle_fq:__pkg__",
        # "//src/lib/marlin_plonk_bindings/tweedle_fq/vector:__pkg__",
        # "//src/lib/marlin_plonk_bindings/tweedle_fq_index:__pkg__",
        # "//src/lib/marlin_plonk_bindings/tweedle_fq_plonk_oracles:__pkg__",
        # "//src/lib/marlin_plonk_bindings/tweedle_fq_plonk_verifier_index:__pkg__",
        # "//src/lib/marlin_plonk_bindings/tweedle_fq_proof:__pkg__",
        # "//src/lib/marlin_plonk_bindings/tweedle_fq_urs:__pkg__",
        # "//src/lib/marlin_plonk_bindings/tweedle_fq_urs/test:__pkg__",
        # "//src/lib/marlin_plonk_bindings/types:__pkg__",
        "//src/lib/participating_state:__pkg__",
        "//src/lib/snark_keys/remove_snark_keys_trigger:__pkg__",
        "//src/lib/snarky_log:__pkg__",
        "//src/lib/transition_frontier_controller:__pkg__",
        "//src/lib/unix_timestamp:__pkg__",
        "//src/lib/web_request:__pkg__",
        "//src/lib/webkit_trace_event:__pkg__",
    ],
    deps = [
        "@opam//pkg:bisect_ppx",
        "@opam//pkg:ppxlib",
        "@ppx_version//src:ppx_version",
    ],
)

###############
ppx_executable(
    name = "ppx.exe[ppx_version][ppx_base][ppx_optcomp][bisect_ppx]",
    lazy_deps = [
        "@opam//pkg:ppx_compare.runtime-lib",
        "@opam//pkg:bisect_ppx.runtime",
    ],
    main = ":Driver",
    opts = THIS_PPX_EXECUTABLE_OPTS,
    visibility = [
        "//src/lib/coda_compile_config:__pkg__",
        "//src/nonconsensus/coda_compile_config:__pkg__",
    ],
    deps = [
        "@opam//pkg:bisect_ppx",
        "@opam//pkg:ppx_base",
        "@opam//pkg:ppxlib",
        "@ppx_optcomp//src:ppx_optcomp",
        "@ppx_version//src:ppx_version",
    ],
)

###############
ppx_executable(
    name = "ppx.exe[ppx_version][ppx_bin_prot][ppx_sexp_conv][ppx_compare][ppx_hash][ppx_optcomp][ppx_deriving.eq][bisect_ppx][ppx_deriving_yojson]",
    lazy_deps = [
        "@opam//pkg:yojson",
        "@opam//pkg:ppx_hash.runtime-lib",
        "@opam//pkg:ppx_deriving_yojson.runtime",
        "@opam//pkg:ppx_sexp_conv.runtime-lib",
        "@opam//pkg:ppx_deriving.runtime",
        "@opam//pkg:ppx_compare.runtime-lib",
        "@opam//pkg:bin_prot",
        "@opam//pkg:bisect_ppx.runtime",
    ],
    main = ":Driver",
    opts = THIS_PPX_EXECUTABLE_OPTS,
    visibility = [
        "//src/lib/sgn:__pkg__",
        "//src/nonconsensus/sgn:__pkg__",
    ],
    deps = [
        "@opam//pkg:bisect_ppx",
        "@opam//pkg:ppx_bin_prot",
        "@opam//pkg:ppx_compare",
        "@opam//pkg:ppx_deriving.eq",
        "@opam//pkg:ppx_deriving_yojson",
        "@opam//pkg:ppx_hash",
        "@opam//pkg:ppx_sexp_conv",
        "@opam//pkg:ppxlib",
        "@ppx_optcomp//src:ppx_optcomp",
        "@ppx_version//src:ppx_version",
    ],
)

###############
ppx_executable(
    name = "ppx.exe[ppx_version][ppx_coda][ppx_jane][ppx_deriving.std][ppx_deriving_yojson][bisect_ppx]",
    lazy_deps = [
        "@opam//pkg:ppx_expect.collector",
        "@opam//pkg:yojson",
        "@opam//pkg:ppx_hash.runtime-lib",
        "@opam//pkg:ppx_deriving_yojson.runtime",
        "@opam//pkg:ppx_sexp_conv.runtime-lib",
        "@opam//pkg:ppx_deriving.runtime",
        "@opam//pkg:ppx_assert.runtime-lib",
        "@opam//pkg:ppx_compare.runtime-lib",
        "@opam//pkg:ppx_inline_test.runtime-lib",
        "@opam//pkg:ppx_bench.runtime-lib",
        "@opam//pkg:bisect_ppx.runtime",
        "@opam//pkg:ppx_enumerate.runtime-lib",
        "@opam//pkg:ppx_module_timer.runtime",
    ],
    main = ":Driver",
    opts = THIS_PPX_EXECUTABLE_OPTS,
    visibility = [
        "//src/lib/logger:__pkg__",
        "//src/lib/pickles/backend:__pkg__",
        "//src/lib/pickles/limb_vector:__pkg__",
        "//src/lib/pickles/pseudo:__pkg__",
    ],
    deps = [
        "@mina//src/lib/ppx_coda",
        "@opam//pkg:bisect_ppx",
        "@opam//pkg:ppx_deriving.std",
        "@opam//pkg:ppx_deriving_yojson",
        "@opam//pkg:ppx_jane",
        "@opam//pkg:ppxlib",
        "@ppx_version//src:ppx_version",
    ],
)

###############
ppx_executable(
    name = "ppx.exe[ppx_version][ppx_coda][ppx_jane][ppx_deriving.std][ppx_deriving_yojson][h_list.ppx][bisect_ppx]",
    lazy_deps = [
        "@opam//pkg:ppx_expect.collector",
        "@opam//pkg:yojson",
        "@opam//pkg:ppx_hash.runtime-lib",
        "@opam//pkg:ppx_deriving_yojson.runtime",
        "@opam//pkg:ppx_sexp_conv.runtime-lib",
        "@opam//pkg:ppx_deriving.runtime",
        "@opam//pkg:ppx_assert.runtime-lib",
        "@opam//pkg:ppx_compare.runtime-lib",
        "@opam//pkg:ppx_inline_test.runtime-lib",
        "@opam//pkg:ppx_bench.runtime-lib",
        "@opam//pkg:bisect_ppx.runtime",
        "@opam//pkg:ppx_enumerate.runtime-lib",
        "@opam//pkg:ppx_module_timer.runtime",
    ],
    main = ":Driver",
    opts = THIS_PPX_EXECUTABLE_OPTS,
    visibility = [
        "//src/lib/pickles:__pkg__",
        "//src/lib/pickles/composition_types:__pkg__",
    ],
    deps = [
        "@mina//src/lib/ppx_coda",
        "@opam//pkg:bisect_ppx",
        "@opam//pkg:ppx_deriving.std",
        "@opam//pkg:ppx_deriving_yojson",
        "@opam//pkg:ppx_jane",
        "@opam//pkg:ppxlib",
        "@ppx_version//src:ppx_version",
        "@snarky//h_list/ppx:ppx_h_list",
    ],
)

###############
ppx_executable(
    name = "ppx.exe[ppx_version][ppx_jane][bisect_ppx]",
    lazy_deps = [
        "@opam//pkg:ppx_expect.collector",
        "@opam//pkg:ppx_hash.runtime-lib",
        "@opam//pkg:ppx_sexp_conv.runtime-lib",
        "@opam//pkg:ppx_assert.runtime-lib",
        "@opam//pkg:ppx_compare.runtime-lib",
        "@opam//pkg:ppx_inline_test.runtime-lib",
        "@opam//pkg:ppx_bench.runtime-lib",
        "@opam//pkg:bisect_ppx.runtime",
        "@opam//pkg:ppx_enumerate.runtime-lib",
        "@opam//pkg:ppx_module_timer.runtime",
    ],
    main = ":Driver",
    opts = THIS_PPX_EXECUTABLE_OPTS,
    visibility = [
        "//src/app/mock_wallet_data:__pkg__",
        "//src/lib/bignum_bigint:__pkg__",
        "//src/lib/coda_debug:__pkg__",
        "//src/lib/file_system:__pkg__",
        "//src/lib/gadt_lib:__pkg__",
        "//src/lib/key_value_database:__pkg__",
        "//src/lib/merkle_list_prover:__pkg__",
        "//src/lib/otp_lib:__pkg__",
        "//src/lib/pickles/one_hot_vector:__pkg__",
        "//src/lib/proof_carrying_data:__pkg__",
        "//src/lib/rocksdb:__pkg__",
        "//src/lib/snark_keys/remove_snark_keys_trigger/clear_keys:__pkg__",
        "//src/lib/storage:__pkg__",
        "//src/lib/sync_handler:__pkg__",
        "//src/lib/transition_chain_prover:__pkg__",
        "//src/lib/truth:__pkg__",
    ],
    deps = [
        "@opam//pkg:bisect_ppx",
        "@opam//pkg:ppx_jane",
        "@opam//pkg:ppxlib",
        "@ppx_version//src:ppx_version",
    ],
)

###############
ppx_executable(
    name = "ppx.exe[ppx_version][ppx_jane][ppx_deriving.eq][bisect_ppx]",
    lazy_deps = [
        "@opam//pkg:ppx_expect.collector",
        "@opam//pkg:ppx_hash.runtime-lib",
        "@opam//pkg:ppx_sexp_conv.runtime-lib",
        "@opam//pkg:ppx_deriving.runtime",
        "@opam//pkg:ppx_assert.runtime-lib",
        "@opam//pkg:ppx_compare.runtime-lib",
        "@opam//pkg:ppx_inline_test.runtime-lib",
        "@opam//pkg:ppx_bench.runtime-lib",
        "@opam//pkg:bisect_ppx.runtime",
        "@opam//pkg:ppx_enumerate.runtime-lib",
        "@opam//pkg:ppx_module_timer.runtime",
    ],
    main = ":Driver",
    opts = THIS_PPX_EXECUTABLE_OPTS,
    visibility = [
        "//src/lib/bowe_gabizon_hash:__pkg__",
        "//src/lib/command_line_tests:__pkg__",
        "//src/lib/direction:__pkg__",
        "//src/lib/global_signer_private_key:__pkg__",
        "//src/lib/linked_tree:__pkg__",
        "//src/lib/merkle_list_verifier:__pkg__",
        "//src/lib/parallel:__pkg__",
        "//src/lib/pokolog:__pkg__",
        "//src/lib/rc_pool:__pkg__",
        "//src/lib/sha256_lib:__pkg__",
        "//src/lib/snarky_blake2:__pkg__",
        "//src/lib/snarky_group_map:__pkg__",
        "//src/lib/snarky_pairing:__pkg__",
        "//src/lib/snarky_taylor:__pkg__",
        "//src/lib/test_util:__pkg__",
        "//src/lib/time_simulator:__pkg__",
        "//src/lib/transition_chain_verifier:__pkg__",
    ],
    deps = [
        "@opam//pkg:bisect_ppx",
        "@opam//pkg:ppx_deriving.eq",
        "@opam//pkg:ppx_jane",
        "@opam//pkg:ppxlib",
        "@ppx_version//src:ppx_version",
    ],
)

###############
ppx_executable(
    name = "ppx.exe[ppx_version][ppx_jane][ppx_deriving.eq][ppx_deriving_yojson][bisect_ppx]",
    lazy_deps = [
        "@opam//pkg:ppx_expect.collector",
        "@opam//pkg:yojson",
        "@opam//pkg:ppx_hash.runtime-lib",
        "@opam//pkg:ppx_deriving_yojson.runtime",
        "@opam//pkg:ppx_sexp_conv.runtime-lib",
        "@opam//pkg:ppx_deriving.runtime",
        "@opam//pkg:ppx_assert.runtime-lib",
        "@opam//pkg:ppx_compare.runtime-lib",
        "@opam//pkg:ppx_inline_test.runtime-lib",
        "@opam//pkg:ppx_bench.runtime-lib",
        "@opam//pkg:bisect_ppx.runtime",
        "@opam//pkg:ppx_enumerate.runtime-lib",
        "@opam//pkg:ppx_module_timer.runtime",
    ],
    main = ":Driver",
    opts = THIS_PPX_EXECUTABLE_OPTS,
    visibility = [
        "//src/lib/pedersen_lib:__pkg__",
        "//src/lib/perf_histograms:__pkg__",
        "//src/lib/snarky_field_extensions:__pkg__",
        "//src/lib/syncable_ledger:__pkg__",
    ],
    deps = [
        "@opam//pkg:bisect_ppx",
        "@opam//pkg:ppx_deriving.eq",
        "@opam//pkg:ppx_deriving_yojson",
        "@opam//pkg:ppx_jane",
        "@opam//pkg:ppxlib",
        "@ppx_version//src:ppx_version",
    ],
)

###############
ppx_executable(
    name = "ppx.exe[ppx_version][ppx_jane][ppx_deriving.std][bisect_ppx]",
    lazy_deps = [
        "@opam//pkg:ppx_expect.collector",
        "@opam//pkg:ppx_hash.runtime-lib",
        "@opam//pkg:ppx_sexp_conv.runtime-lib",
        "@opam//pkg:ppx_deriving.runtime",
        "@opam//pkg:ppx_assert.runtime-lib",
        "@opam//pkg:ppx_compare.runtime-lib",
        "@opam//pkg:ppx_inline_test.runtime-lib",
        "@opam//pkg:ppx_bench.runtime-lib",
        "@opam//pkg:bisect_ppx.runtime",
        "@opam//pkg:ppx_enumerate.runtime-lib",
        "@opam//pkg:ppx_module_timer.runtime",
    ],
    main = ":Driver",
    opts = THIS_PPX_EXECUTABLE_OPTS,
    visibility = [
        "//src/app/logproc:__pkg__",
        "//src/lib/interruptible:__pkg__",
        "//src/lib/logproc_lib:__pkg__",
    ],
    deps = [
        "@opam//pkg:bisect_ppx",
        "@opam//pkg:ppx_deriving.std",
        "@opam//pkg:ppx_jane",
        "@opam//pkg:ppxlib",
        "@ppx_version//src:ppx_version",
    ],
)

###############
ppx_executable(
    name = "ppx.exe[ppx_version][ppx_jane][ppx_deriving_yojson][bisect_ppx]",
    lazy_deps = [
        "@opam//pkg:ppx_expect.collector",
        "@opam//pkg:yojson",
        "@opam//pkg:ppx_hash.runtime-lib",
        "@opam//pkg:ppx_deriving_yojson.runtime",
        "@opam//pkg:ppx_sexp_conv.runtime-lib",
        "@opam//pkg:ppx_assert.runtime-lib",
        "@opam//pkg:ppx_compare.runtime-lib",
        "@opam//pkg:ppx_inline_test.runtime-lib",
        "@opam//pkg:ppx_bench.runtime-lib",
        "@opam//pkg:bisect_ppx.runtime",
        "@opam//pkg:ppx_enumerate.runtime-lib",
        "@opam//pkg:ppx_module_timer.runtime",
    ],
    main = ":Driver",
    opts = THIS_PPX_EXECUTABLE_OPTS,
    visibility = [
        "//src/lib/codable:__pkg__",
        "//src/lib/rose_tree:__pkg__",
        "//src/lib/snark_keys:__pkg__",
        "//src/lib/visualization:__pkg__",
    ],
    deps = [
        "@opam//pkg:bisect_ppx",
        "@opam//pkg:ppx_deriving_yojson",
        "@opam//pkg:ppx_jane",
        "@opam//pkg:ppxlib",
        "@ppx_version//src:ppx_version",
    ],
)

###############
ppx_executable(
    name = "ppx.exe[ppx_version][ppx_jane][ppx_deriving_yojson][ppx_deriving.std][bisect_ppx]",
    lazy_deps = [
        "@opam//pkg:ppx_expect.collector",
        "@opam//pkg:yojson",
        "@opam//pkg:ppx_hash.runtime-lib",
        "@opam//pkg:ppx_deriving_yojson.runtime",
        "@opam//pkg:ppx_sexp_conv.runtime-lib",
        "@opam//pkg:ppx_deriving.runtime",
        "@opam//pkg:ppx_assert.runtime-lib",
        "@opam//pkg:ppx_compare.runtime-lib",
        "@opam//pkg:ppx_inline_test.runtime-lib",
        "@opam//pkg:ppx_bench.runtime-lib",
        "@opam//pkg:bisect_ppx.runtime",
        "@opam//pkg:ppx_enumerate.runtime-lib",
        "@opam//pkg:ppx_module_timer.runtime",
    ],
    main = ":Driver",
    opts = THIS_PPX_EXECUTABLE_OPTS,
    visibility = [
        "//src/lib/zexe_backend:__pkg__",
        "//src/lib/zexe_backend/tweedle:__pkg__",
    ],
    deps = [
        "@opam//pkg:bisect_ppx",
        "@opam//pkg:ppx_deriving.std",
        "@opam//pkg:ppx_deriving_yojson",
        "@opam//pkg:ppx_jane",
        "@opam//pkg:ppxlib",
        "@ppx_version//src:ppx_version",
    ],
)

###############
ppx_executable(
    name = "ppx.exe[ppx_version][ppx_jane][ppxlib.metaquot][bisect_ppx]",
    lazy_deps = [
        "@opam//pkg:ppx_expect.collector",
        "@opam//pkg:ppx_hash.runtime-lib",
        "@opam//pkg:ppx_sexp_conv.runtime-lib",
        "@opam//pkg:ppx_assert.runtime-lib",
        "@opam//pkg:ppx_compare.runtime-lib",
        "@opam//pkg:ppx_inline_test.runtime-lib",
        "@opam//pkg:ppx_bench.runtime-lib",
        "@opam//pkg:bisect_ppx.runtime",
        "@opam//pkg:ppx_enumerate.runtime-lib",
        "@opam//pkg:ppx_module_timer.runtime",
    ],
    main = ":Driver",
    opts = THIS_PPX_EXECUTABLE_OPTS,
    visibility = [
        "//src/lib/coda_base/gen:__pkg__",
        "//src/lib/dummy_values:__pkg__",
        "//src/lib/dummy_values/gen_values:__pkg__",
        "//src/lib/precomputed_values:__pkg__",
    ],
    deps = [
        "@opam//pkg:bisect_ppx",
        "@opam//pkg:ppx_jane",
        "@opam//pkg:ppxlib",
        "@opam//pkg:ppxlib.metaquot",
        "@ppx_version//src:ppx_version",
    ],
)

###############
ppx_executable(
    name = "ppx.exe[ppx_version][ppx_let][ppx_sexp_conv][ppx_optcomp][bisect_ppx]",
    lazy_deps = [
        "@opam//pkg:ppx_sexp_conv.runtime-lib",
        "@opam//pkg:bisect_ppx.runtime",
    ],
    main = ":Driver",
    opts = THIS_PPX_EXECUTABLE_OPTS,
    visibility = [
        "//src/app/display_public_key:__pkg__",
        "//src/app/generate_keypair:__pkg__",
    ],
    deps = [
        "@opam//pkg:bisect_ppx",
        "@opam//pkg:ppx_let",
        "@opam//pkg:ppx_sexp_conv",
        "@opam//pkg:ppxlib",
        "@ppx_optcomp//src:ppx_optcomp",
        "@ppx_version//src:ppx_version",
    ],
)

###############
ppx_executable(
    name = "ppx.exe[ppx_version][ppx_optcomp][bisect_ppx]",
    lazy_deps = [
        "@opam//pkg:bisect_ppx.runtime",
    ],
    main = ":Driver",
    opts = THIS_PPX_EXECUTABLE_OPTS,
    visibility = [
        "//src/lib/o1trace:__pkg__",
        "//src/lib/outside_hash_image:__pkg__",
        "//src/lib/rosetta_lib/test:__pkg__",
        "//src/nonconsensus/outside_hash_image:__pkg__",
        "//src/nonconsensus/rosetta_lib/test:__pkg__",
    ],
    deps = [
        "@opam//pkg:bisect_ppx",
        "@opam//pkg:ppxlib",
        "@ppx_optcomp//src:ppx_optcomp",
        "@ppx_version//src:ppx_version",
    ],
)

###############
ppx_executable(
    name = "ppx.exe[ppx_version][ppx_optcomp][ppx_let][bisect_ppx]",
    lazy_deps = [
        "@opam//pkg:bisect_ppx.runtime",
    ],
    main = ":Driver",
    opts = THIS_PPX_EXECUTABLE_OPTS,
    visibility = [
        "//src/lib/genesis_ledger:__pkg__",
        "//src/lib/test_genesis_ledger:__pkg__",
    ],
    deps = [
        "@opam//pkg:bisect_ppx",
        "@opam//pkg:ppx_let",
        "@opam//pkg:ppxlib",
        "@ppx_optcomp//src:ppx_optcomp",
        "@ppx_version//src:ppx_version",
    ],
)

###############
ppx_executable(
    name = "ppx.exe[ppx_version][ppx_optcomp][ppx_let][ppx_inline_test][ppx_custom_printf][bisect_ppx]",
    lazy_deps = [
        "@opam//pkg:ppx_sexp_conv.runtime-lib",
        "@opam//pkg:ppx_inline_test.runtime-lib",
        "@opam//pkg:bisect_ppx.runtime",
    ],
    main = ":Driver",
    opts = THIS_PPX_EXECUTABLE_OPTS,
    visibility = [
        "//src/lib/quickcheck_lib:__pkg__",
        "//src/nonconsensus/quickcheck_lib:__pkg__",
    ],
    deps = [
        "@opam//pkg:bisect_ppx",
        "@opam//pkg:ppx_custom_printf",
        "@opam//pkg:ppx_inline_test",
        "@opam//pkg:ppx_let",
        "@opam//pkg:ppxlib",
        "@ppx_optcomp//src:ppx_optcomp",
        "@ppx_version//src:ppx_version",
    ],
)

###############
ppx_executable(
    name = "ppx.exe[ppx_version][ppx_optcomp][ppx_let][ppxlib.metaquot][bisect_ppx]",
    lazy_deps = [
        "@opam//pkg:bisect_ppx.runtime",
    ],
    main = ":Driver",
    opts = THIS_PPX_EXECUTABLE_OPTS,
    visibility = [
        "//src/lib/precomputed_values/gen_values:__pkg__",
        "//src/lib/snark_keys/gen_keys:__pkg__",
    ],
    deps = [
        "@opam//pkg:bisect_ppx",
        "@opam//pkg:ppx_let",
        "@opam//pkg:ppxlib",
        "@opam//pkg:ppxlib.metaquot",
        "@ppx_optcomp//src:ppx_optcomp",
        "@ppx_version//src:ppx_version",
    ],
)

###############
ppx_executable(
    name = "ppx.exe[ppx_version][ppx_optcomp][ppx_sexp_conv][ppx_compare][ppx_inline_test][ppx_assert][ppx_deriving.eq][ppx_deriving_yojson][ppx_let][bisect_ppx]",
    lazy_deps = [
        "@opam//pkg:yojson",
        "@opam//pkg:ppx_deriving_yojson.runtime",
        "@opam//pkg:ppx_sexp_conv.runtime-lib",
        "@opam//pkg:ppx_deriving.runtime",
        "@opam//pkg:ppx_assert.runtime-lib",
        "@opam//pkg:ppx_compare.runtime-lib",
        "@opam//pkg:ppx_inline_test.runtime-lib",
        "@opam//pkg:bisect_ppx.runtime",
    ],
    main = ":Driver",
    opts = THIS_PPX_EXECUTABLE_OPTS,
    visibility = [
        "//src/lib/random_oracle:__pkg__",
        "//src/nonconsensus/random_oracle:__pkg__",
    ],
    deps = [
        "@opam//pkg:bisect_ppx",
        "@opam//pkg:ppx_assert",
        "@opam//pkg:ppx_compare",
        "@opam//pkg:ppx_deriving.eq",
        "@opam//pkg:ppx_deriving_yojson",
        "@opam//pkg:ppx_inline_test",
        "@opam//pkg:ppx_let",
        "@opam//pkg:ppx_sexp_conv",
        "@opam//pkg:ppxlib",
        "@ppx_optcomp//src:ppx_optcomp",
        "@ppx_version//src:ppx_version",
    ],
)

###############
ppx_executable(
    name = "ppx.exe[ppx_version][ppxlib.metaquot][bisect_ppx]",
    lazy_deps = [
        "@opam//pkg:bisect_ppx.runtime",
    ],
    main = ":Driver",
    opts = THIS_PPX_EXECUTABLE_OPTS,
    visibility = [
        "//src/lib/ppx_dhall_type:__pkg__",
        "//src/lib/ppx_register_event:__pkg__",
    ],
    deps = [
        "@opam//pkg:bisect_ppx",
        "@opam//pkg:ppxlib",
        "@opam//pkg:ppxlib.metaquot",
        "@ppx_version//src:ppx_version",
    ],
)

###############
ppx_executable(
    name = "ppx.exe[ppxlib.metaquot]",
    main = ":Driver",
    opts = THIS_PPX_EXECUTABLE_OPTS,
    visibility = [
        "//src/lib/ppx_coda/ppx_representatives:__pkg__",
        "//src/lib/ppx_coda/ppx_to_enum:__pkg__",
        "@graphql_ppx//src/native:__pkg__",
        "@ppx_version//src:__pkg__",
        "@snarky//h_list/ppx:__pkg__",
        "@snarky//meja/ocaml:__pkg__",
    ],
    deps = [
        "@opam//pkg:ppxlib",
        "@opam//pkg:ppxlib.metaquot",
    ],
)

################################################################
################################################################
ppx_module(
    name = "Driver",
    src = ":ppxlib_driver.ml",
    opts = ["-linkall"],
    visibility = ["//visibility:public"],
    deps = ["@opam//pkg:ppxlib"],
)

########
genrule(
    name = "gendriver",
    outs = ["ppxlib_driver.ml"],
    cmd = "\n".join([
        "echo \"(* GENERATED FILE - DO NOT EDIT *)\" > \"$@\"",
        "echo \"let () = Ppxlib.Driver.standalone ()\" >> \"$@\"",
    ]),
)

###################################################################
######## Configuration Settings - see :BUILD.bzl #################
bool_flag(
    name = "always-link",
    build_setting_default = False,
)

config_setting(
    name = "enable_always_link",
    flag_values = {":always-link": str(True)},
)

bool_flag(
    name = "debug",
    build_setting_default = True,
)

config_setting(
    name = "enable_debug",
    flag_values = {":debug": str(True)},
)

bool_flag(
    name = "threads",
    build_setting_default = True,
)

config_setting(
    name = "enable_threads",
    flag_values = {":threads": str(True)},
)

bool_flag(
    name = "tooling",
    build_setting_default = False,
)

config_setting(
    name = "enable_tooling",
    flag_values = {":tooling": str(True)},
)

bool_flag(
    name = "verbose",
    build_setting_default = False,
)

config_setting(
    name = "enable_verbose",
    flag_values = {":verbose": str(True)},
)

## PPX control
string_flag(
    name = "ppx-out",
    build_setting_default = "binary",
    values = [
        "binary",
        "text",
    ],
)

config_setting(
    name = "enable_ppx_output_format_text",
    flag_values = {":ppx-out": "text"},
)

config_setting(
    name = "enable_ppx_output_format_binary",
    flag_values = {":ppx-out": "binary"},
)
